updated hosting url

--- a/example/src/app/app.component.html
+++ b/example/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 <ul>
 	<li><span>Github URL:&nbsp;</span><a href="https://github.com/clane/ng-routing-focus-top-due-to-navigation-change">https://github.com/clane/ng-routing-focus-top-due-to-navigation-change</a></li>
-	<li><span>Hosting URL:&nbsp;</span><a href=""></a></li>
+	<li><span>Hosting URL:&nbsp;</span><a href="http://www.chrislane.info/ng-routing-focus-top-due-to-navigation-change/dist/">http://www.chrislane.info/ng-routing-focus-top-due-to-navigation-change/dist/</a></li>
 </ul>
 
 
